 classDiagram
     class TaskItem {
         +int Id
         +string Title
         +string Description
         +TaskStatus Status
         +DateTime Date
         +TimeOnly StartTime
         +TimeOnly EndTime
         +List<int> EventIds
         +List<int> AssignedToIds
         +DateTime UpdatedAt
         +CreateTask()
         +UpdateStatus()
     }

     class User {
         +int Id
         +string FirstName
         +string LastName
         +string Email
         +string Password
         +string PhoneNumber
         +List<UserRole> Roles
         +List<Competency> Competencies
         +List<int> EventIds
         +bool EmailNotification
         +DateTime LastLogin
         +DateTime CreatedAt
         +DateTime UpdatedAt
         +AssignToTask()
         +UpdateProfile()
     }

     class Event {
         +int Id
         +string Title
         +DateTime DateForEvent
         +int LocationId
         +string ByCustomer
         +string FoodChoices
         +string SpecialRequest
         +int Participants
         +CreateEvent()
         +AssignTasks()
     }

     class Location {
         +int Id
         +string Name
         +int EventId
     }

     class TaskStatus {
         <<enumeration>>
         NotStarted
         InProgress
         Completed
     }

     class UserRole {
         <<enumeration>>
         CoWorker
         Manager
         Administrator
     }

     class Competency {
         <<enumeration>>
         Dishwasher
         TableSetter
         Chef
         Cashier
         Cleaning
         EventLeader
     }

     %% Relationships
     TaskItem "1" --> "*" User : assigned to
     TaskItem "*" --> "*" Event : belongs to
     User "*" --> "*" Event : participates in
     Event "1" --> "1" Location : located at
     User "*" --> "*" UserRole : has
     User "*" --> "*" Competency : has

